@@ -4,6 +4,8 @@ use Catmandu::Sane;
 use Moo::Role;
 use namespace::clean;
 
+our $VERSION = "0.05";
+
 requires 'create_table';
 requires 'add_row';
 
