@@ -5,6 +5,8 @@ use DBD::Pg ();
 use Moo;
 use namespace::clean;
 
+our $VERSION = "0.05";
+
 with 'Catmandu::Store::DBI::Handler';
 
 sub _column_sql {
