@@ -5,6 +5,8 @@ use Catmandu::Util qw(is_value is_string is_array_ref);
 use Moo;
 use namespace::clean;
 
+our $VERSION = "0.05";
+
 with 'Catmandu::Iterable';
 
 has bag => (is => 'ro', required => 1);
